<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="36dp"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/review_iv_description"
            app:srcCompat="@android:drawable/stat_notify_chat" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/userImage"
            android:layout_marginStart="9dp"
            android:textColor="@color/colorWhitish"
            android:layout_toEndOf="@+id/userImage"
            android:text="@string/review_author_test" />

        <TextView
            android:id="@+id/userReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/userImage"
            android:layout_below="@+id/userImage"
            android:textColor="@color/colorWhitish"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/review_content_test" />

    </RelativeLayout>


</LinearLayout>