<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailActivity">

<ScrollView
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@color/colorAccent"
    android:scrollbarSize="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="17dp"
            android:textColor="@color/colorWhitish"
            android:textSize="21sp"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:text="Movie Title Here" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detail_poster_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/poster_iv_description"
                android:padding="8dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="22dp"
                    android:paddingBottom="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhitish"
                    tools:text="2018-06-08" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                <TextView
                    android:id="@+id/user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:paddingBottom="8dp"
                    android:layout_marginRight="24dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhitish"
                    tools:text="@string/user_rating" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/floatingFavButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:tag="notfavourited"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="8dp"
                    android:padding="8dp"
                    app:backgroundTint="@color/colorPrimary"
                    app:srcCompat="@drawable/btn_star_big_off" />

                </LinearLayout>

                <Button
                    android:id="@+id/reviews"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/review_button"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/plot_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@color/colorWhitish"
            tools:text="@string/test_plot" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="19sp"
            android:textStyle="bold|italic"
            android:id="@+id/movieTrailers"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhitish"
            android:text="@string/LOADING_TRAILERS" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailer_r_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
       </android.support.v7.widget.RecyclerView>


    </LinearLayout>
</ScrollView>
</FrameLayout>